# derisk-research

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  CONTRIBUTING.md  Dockerfile  Dockerfile.data-updator  ETH-DAI.csv  ETH-USDC.csv  ETH-USDT.csv  ETH-wBTC.csv  PR_RULES.md  README.md  app.py  blockchain_call.py  chart_utils.py  charts.py  classes.py  collateral_stats.csv  comparison_stats.csv  compute.py  constants.py  data.py  db.py  debt_stats.csv  docker-compose.yaml  general_stats.csv  get_data.py  hashstack.py  hashstack_demo.ipynb  histogram.py  index.py  large_loans_sample.csv  learning.md  liquidation_changes  liquidation_playground.py  liquidation_sketch.py  liquidity_demo.ipynb  makefile  mock_app.py  (+31 more)
apps/dashboard_app/: .entrypoint.sh  .env.dev  Dockerfile  README.md  app.Dockerfile  dashboard.py  data_conector.py  derisk_dump_part_aa.sql  docker-compose.yml  entrypoint.sh  load_data.py  pyproject.toml  telegram_app.Dockerfile  webhook_simulator.Dockerfile
apps/dashboard_app/alembic/: env.py
apps/dashboard_app/app/: .env.example  main.py
apps/dashboard_app/charts/: __init__.py  constants.py  main.py  main_chart_figure.py  utils.py
apps/dashboard_app/database/: crud.py  database.py  models.py  schemas.py
apps/dashboard_app/dev/: Dockerfile  app.Dockerfile
apps/dashboard_app/helpers/: ekubo.py  load_data.py  loans_table.py  protocol_stats.py  settings.py  tools.py
apps/dashboard_app/tests/: data.csv  main_test.py  protocol_stats_test.py  test_dashboard_data_handler.py  test_ekubo.py  test_loan_state.py  test_loans_table.py  test_state.py  test_tools.py  test_user_debt.py  test_user_history.py  test_utils.py  test_watcher_mixin.py  utils.py
apps/data_handler/: .env.dev  .env.example  Dockerfile  Dockerfile.celery  Dockerfile.celery_beat  Dockerfile.celery_worker  README.md  alembic.ini  celery_conf.py  dump.rdb  entrypoint.sh  main.py  migrate.sh  pyproject.toml  run_celery.sh
apps/data_handler/background_tasks/: tasks.py
apps/data_handler/celery_app/: celery_conf.py  event_tasks.py  order_books_tasks.py  tasks.py
apps/data_handler/db/: __init__.py  crud.py  database.py  schemas.py
apps/data_handler/handler_tools/: api_connector.py  constants.py  nostra_alpha_settings.py  nostra_mainnet_settings.py
apps/data_handler/handlers/: blockchain_call.py  calculations.py  helpers.py  settings.py  state.py
apps/data_handler/init-db/: init.sql
apps/data_handler/migrations/: env.py
apps/data_handler/models/: base.py
apps/data_handler/nginx/: default.conf
apps/data_handler/tests/: __init__.py  conftest.py  fetch_zklend_specific_token_settings.py  liquidation_test.py  test_api_connector.py  test_health_ratio_tests.py  test_nostra_transformer.py  test_zklend_transformer.py
apps/legacy_app/: Dockerfile  Dockerfile.data-updator  app.py  pyproject.toml  setup.sh  update_data.py  update_data_continuously.py
apps/legacy_app/notebooks/: Analyze_user_behavior_across_different_lending_protocols.ipynb  nostra_mainnet_demo.ipynb  standardize_events_data.ipynb  vesu_procol.ipynb  vesu_protocol.ipynb
apps/legacy_app/src/: chart_utils.py  db.py  hashstack_v1.py  helpers.py  nostra_alpha.py  nostra_mainnet.py  persistent_state.py  protocol_parameters.py  protocol_stats.py  state.py  types.py  utils.py  zklend.py
apps/sdk/: .env.dev  .env.example  Dockerfile  README.md  alembic.ini  db_connector.py  docker-compose.yaml  main.py  mock_data.csv  pyproject.toml  pytest.ini
apps/sdk/alembic/: README  env.py
apps/sdk/api/: auth.py  loan_state.py  routes.py  user.py  user_model.py
apps/sdk/db/: models.py
apps/sdk/schemas/: models.py  schemas.py
apps/shared/: Dockerfile.celery  Dockerfile.celery_beat  Dockerfile.celery_worker  __init__.py  alembic.ini  amms.py  blockchain_call.py  celery_conf.py  constants.py  helpers.py  loan_entity.py  loans_table.py  protocol_ids.py  pyproject.toml  redis_client.py  run_celery.sh  starknet_client.py  state.py
apps/web_app/: .env.dev  .env.test  Dockerfile  README.md  main.py  pyproject.toml
data_handler/: .env.example  Dockerfile  README.md  __init__.py  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  main.py  order_books_tests.py  pyproject.toml  readme.md
data_handler/celery_app/: celery_conf.py  order_books_tasks.py  tasks.py
data_handler/database/: __init__.py  crud.py  models.py  schemas.py
data_handler/db/: __init__.py  crud.py  models.py  schemas.py
data_handler/error_handler/: __init__.py  config.py  notifications.py  values.py
data_handler/handler_tools/: api_connector.py  constants.py  nostra_mainnet_settings.py  types.py
data_handler/handlers/: blockchain_call.py  exceptions.py  helpers.py  settings.py  state.py
data_handler/liquidable_debt/: collectors.py  handlers.py  managers.py  values.py
data_handler/migrations/: env.py
data_handler/nginx/: Dockerfile  default.conf
data_handler/scripts/: fetch_zklend_specific_token_settings_test.py
data_handler/tests/: conftest.py  fetch_zklend_specific_token_settings.py  test_api_connector.py
data_handler/tools/: api_connector.py  constants.py
web_app/: .env.example  .gitignore  Dockerfile  README.md  __logger__.py  alembic.ini  bot_entrypoint.sh  celerybeat-schedule.db  docker-compose.yaml  ekubo-bids-asks.ipynb  entrypoint.sh  main.py  pyproject.toml
web_app/database/: crud.py  database.py  models.py  schemas.py
web_app/derisk_alert/: celery_conf.py  tasks.py
web_app/ekubo/: README.md  api_connector.py  histogram.py  main.py
web_app/migrations/: env.py  script.py.mako
web_app/nginx/: Dockerfile  default.conf
web_app/order_books/: abstractions.py  constants.py
web_app/static/: notification.css
web_app/telegram/: __init__.py  __main__.py  bot.py  config.py  crud.py  handlers.py  middleware.py  notifications.py  utils.py
web_app/templates/: notification.html
web_app/tests/: conftest.py  test_main.py  values.py
web_app/tools/: data_handler_connector.py
web_app/utils/: abstractions.py  exceptions.py  fucntools.py  helpers.py  middlewares.py  state.py  values.py  zklend.py
(+594 files in other folders)
