[tool.poetry]
name = "derisk-research"
version = "0.1.0"
description = ""
authors = ["Lukas Petrasek <lukas@carmine.finance>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
pandas = "^2.2.2"
starknet-py = "^0.22.0"
plotly = "^5.22.0"
fastparquet = "^2024.5.0"
google-cloud-storage = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
