[tool.poetry]
name = "data-handler"
version = "0.1.0"
description = ""
authors = ["Oleh Kostashchuk <oleh.kostashchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
pandas = "^2.2.2"
gcloud = "^0.18.3"
google-cloud-storage = "^2.16.0"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
