[tool.poetry]
name = "shared"
version = "0.1.0"
description = "DeRisk implementation on Starknet"
authors = ["Mirabel <mirabelchiemezie001@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
starknet-py = "^0.22.0"
aiogram = "^3.12.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [tool.pytest.ini_options]
# pythonpath = ["apps/shared"]
# testpaths = ["apps/shared/tests"]
# python_files = ["test_*.py"]
# asyncio_mode = "auto"  # Enable pytest-asyncio for all tests
markers = [
    "asyncio: mark test as an asyncio test",
]
