[tool.poetry]
name = "shared"
version = "0.1.0"
description = "DeRisk implementation on Starknet"
authors = ["Mirabel <mirabelchiemezie001@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
starknet-py = "^0.22.0"
aiogram = "^3.12.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
web3 = "^6.0.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["apps/shared"]
testpaths = ["apps/shared/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio test",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
exclude = [".git", "__pycache__", "build", "dist"]
