[tool.poetry]
name = "derisk"
version = "0.1.0"
description = ""
authors = ["iamnovichek <rungotika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
black = "^24.4.0"
isort = "^5.13.2"
sqlalchemy-utils = "^0.41.2"
email-validator = "^2.1.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
faker = "^24.14.0"
httpx = "^0.27.0"
exrex = "^0.11.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
aiogram = "^3.5.0"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
dask = {extras = ["dataframe"], version = "^2024.5.0"}
gcsfs = "^2024.3.1"
redis = "^5.0.4"
celery = "^5.4.0"
asyncpg = "^0.29.0"
matplotlib = "^3.9.0"


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | versions
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = ["web_app"]
